Post image css enhancements

--- a/css/reader.css
+++ b/css/reader.css
@@ -3,4 +3,14 @@ p {
    line-height: 1.5;
 }
 
-img[alt=post-image] { float: right; }
+img[alt=post-image] { 
+	float: right; 
+	display: inline-block;
+    max-width: 100%;
+    height: auto;
+    padding: 4px;
+    line-height: 1.42857143;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
